--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "Narrative"]
-	path = Narrative
-	url = https://github.com/InterfaceGuy/Narrative
 [submodule "DomesticatedMind"]
 	path = DomesticatedMind
 	url = https://github.com/InterfaceGuy/DomesticatedMind.git
@@ -10,3 +7,6 @@
 [submodule "MeaningCrisis"]
 	path = MeaningCrisis
 	url = https://github.com/InterfaceGuy/MeaningCrisis.git
+[submodule "DiaLogos"]
+	path = DiaLogos
+	url = https://github.com/InterfaceGuy/DiaLogos.git
